# HuffmanCoding

./: CMakeLists.txt  README.md
src/: bitiostream.cpp  bitiostream.h  canonicalcode.cpp  canonicalcode.h  code_tree.cpp  code_tree.h  frequency_table.cpp  frequency_table.h  huffman_coder.cpp  huffman_coder.h  huffman_decoder.cpp  huffman_decoder.h  huffmandecode.cpp  huffmanencode.cpp  main.cpp
test/: frequency_table_test.cpp  frequencytable_test.cpp  test.cpp
